--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -16,7 +16,7 @@
 }
 
 body {
-    background-image: linear-gradient(rgba(219, 145, 145, 0.4), rgba(62, 20, 20, 0.4)), url(../img/wooden-background.jpg);
+    background-image: linear-gradient(rgba(219, 145, 145, 0.4), rgba(62, 20, 20, 0.4)), url(../img/back.jpg);
     background-size: cover;
     background-position: center;
     font-family: Lato;
@@ -26,10 +26,27 @@ body {
     color: #555;
 }
 
+.container {
+	width: 1020px;
+	margin: 20px auto;
+}
+
+.rules {
+	margin: 0 auto;
+	color: #fff;
+	padding: 10px 10px 10px 30px;
+	background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7));
+}
+
+.rules h2 {
+	text-align: center;
+	margin-bottom: 10px;
+}
+
 .wrapper {
     width: 1000px;
     position: absolute;
-    top: 50%;
+    top: 55%;
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: #fff;
@@ -126,6 +143,7 @@ button:focus {
     outline: none;
 }
 
+/*
 i {
     color: #EB4D4D;
     display: inline-block;
@@ -159,6 +177,7 @@ i {
   100% {
     transform: scale(1, 1);
   }
+*/
 }
 
 .btn-new { top: 45px;}
